syntax = "proto3";

package protobuf;

option java_package = "edu.snu.vortex.runtime.common.comm";
option java_outer_classname = "RuntimeDefinitions";

enum MessageType {
    ScheduleTaskGroup = 0;
    TaskStateChanged = 1;
    ExecutorReady = 2;
}

enum TaskState {
    READY = 0;
    RUNNING = 1;
    COMPLETE = 2;
    FAILED = 3;
}

message RtControllableMsg {
    MessageType type = 1;
    oneof messageTypes {
        TaskStateChangedMsg taskStateChangedMsg = 2;
        ExecutorReadyMsg executorReadyMsg = 3;
        ScheduleTaskGroupMsg scheduleTaskGroupMsg = 4;
    }
}

message ScheduleTaskGroupMsg {

}

message TaskStateChangedMsg {
    string taskGroupId = 1;
    TaskState state = 2;
}

message ExecutorReadyMsg {
    string executorId = 1;
}





